--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gray-matter": "^4.0.3",
     "langchain": "^0.3.2",
     "lucide-react": "^0.441.0",
+    "motion": "^12.15.0",
     "next": "^14.2.12",
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.3.0",
